navbar css start

--- a/nft-template/styles/globals.css
+++ b/nft-template/styles/globals.css
@@ -1,13 +1,16 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+:root {
+  --icons-color: #4c5773;
+  --icons-light-color: #4c577341;
+  --icons-bg-color: #e2e6e9;
+  --shadow-dark-color: #d3dae7;
+  --shadow-light-color: #fff;
+  --main-bg-color: #ecf0f3;
+
+  --box-shadow: 1rem 1rem 1rem var(var(--shadow-dark-color), -1rem -1rem 1rem var(var(--shadow-dark-color)));
+
+  --box-shadow-2: 0rem 0rem 0rem var(var(--shadow-dark-color), -.3rem -.3rem 1rem var(var(--shadow-dark-color)));
 }
 
 html,
@@ -26,8 +29,29 @@ body {
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  -webkit-tap-highlight-color: none;
+}
+
+::selection {
+  color: var(--shadow-dark-color);
+  background-color: var(--icons-color);
+}
+
+
+::-webkit-scrollbar{
+  width:  1rem;
+  border: 1px solid var(--main-bg-color);
+}
+
+::-webkit-scrollbar-track{
+  background: var(--main-bg-color);
+  border-radius: 0;
+}
+
+::-webkit-scrollbar-thumb{
+  background: var(--icons-color);
+  border-radius: 2rem;
+  width: 2.5rem;
 }
 
 a {
