--- a/nft-template/components/NavBar/NavBar.module.css
+++ b/nft-template/components/NavBar/NavBar.module.css
@@ -22,7 +22,32 @@
     align-items: center;
 }
 
-.navbar_container_left_box_inpu_box{
+.navbar_container_left_input_box{
     width: 60%;
-    border: 1px solid var();
+    border: 1px solid var(--icons-color);
+    display: flex;
+    align-items: center;
+    padding: .5rem;
+    border-radius: 2rem;
+}
+
+.navbar_container_left_input_box input{
+    width: 90%;
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
+.search_icon{
+    cursor: pointer;
+    font-size: 1.4rem;
+}
+
+/*right side*/
+.navbar_container_right{
+    display: grid;
+    grid-template-columns: 1fr 1fr .5fr 1fr .3fr;
+    gap: 1rem;
+    align-items: center;
+    align-self: flex-end;
 }
