--- a/nft-template/components/NavBar/NavBar.module.css
+++ b/nft-template/components/NavBar/NavBar.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     padding: 1.5rem;
     position: relative;
-    z-index:   100;/*highest z-index*/
+    z-index:   1000;/*highest z-index*/
 }
 
 .navbar_container{
@@ -50,4 +50,100 @@
     gap: 1rem;
     align-items: center;
     align-self: flex-end;
+}
+
+.navbar_container_right_discover{
+    position: relative;
+    cursor: pointer;
+}
+.navbar_container_right_help{
+    position: relative;
+    cursor: pointer;
+}
+
+.navbar_container_right_discover_box,
+.navbar_container_right_help_box
+{
+    position: absolute;
+    padding: 1rem 0.5rem;
+    box-shadow: var(--box-shadow);
+    font-size: 1rem;
+    width: 15rem;
+    border-radius: 1rem;
+    background-color: var(--main-bg-color);
+}
+
+.navbar_container_right_notify{
+    position: relative;
+    cursor: pointer;
+}
+
+.notify{
+    font-size: 2rem;
+}
+
+.navbar_container_right_button{
+    position: relative;
+    cursor: pointer;
+}
+
+.navbar_container_right_profile_box{
+    position: relative;
+    cursor: pointer;
+}
+
+.navbar_container_right_profile{
+    border-radius: 50%;
+}
+
+.navbar_container_right_menuBtn{
+    display: none;
+}
+
+.menuIcon{
+    font-size: 2.5rem;
+    cursor: pointer;
+}
+
+/*sidebar*/
+.sideBar{
+    position: fixed;
+    top: 0;
+    width: 24rem;
+    background-color: var(--main-bg-color);
+    box-shadow: var(--box-shadow);
+    height: 100vh;
+    overflow-y: auto;
+    display: none;
+    z-index: 1000;
+}
+.sideBar::-webkit-scrollbar{
+    display: none;
+}
+
+@media screen and (min-device-width: 320px) and (max-device-width: 770px) {
+    .navbar_container{
+        grid-template-columns: 1fr 1fr;
+    }
+    .navbar_container_left{
+        grid-template-columns: 1fr;
+    }
+    .navbar_container_right{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    
+    .navbar_container_right_menuBtn{
+        display: block;
+    }
+
+    .navbar_container_left_input_box,
+    .navbar_container_right_discover,
+    .navbar_container_right_help,
+    .navbar_container_right_button{
+        display: none;
+    }
+
+    .sideBar{
+        display: block;
+    }
 }
