--- a/nft-template/styles/globals.css
+++ b/nft-template/styles/globals.css
@@ -8,9 +8,9 @@
   --shadow-light-color: #fff;
   --main-bg-color: #ecf0f3;
 
-  --box-shadow: 1rem 1rem 1rem var(var(--shadow-dark-color), -1rem -1rem 1rem var(var(--shadow-dark-color)));
+  --box-shadow: 0.5rem 0.5rem 0.5rem var(--shadow-dark-color), -0.5rem -0.5rem 0.5rem var(--shadow-light-color);
 
-  --box-shadow-2: 0rem 0rem 0rem var(var(--shadow-dark-color), -.3rem -.3rem 1rem var(var(--shadow-dark-color)));
+  --box-shadow-2: 0rem 0rem 0rem var(--shadow-dark-color), -.3rem -.3rem 1rem var(--shadow-light-color);
 }
 
 html,
@@ -23,9 +23,10 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  background-color: var(--main-bg-color);
+  color: var(--icons-color);
 }
 
 * {
