--- a/nft-template/components/NavBar/NavBar.module.css
+++ b/nft-template/components/NavBar/NavBar.module.css
@@ -49,7 +49,7 @@
     grid-template-columns: 1fr 1fr .5fr 1fr .3fr;
     gap: 1rem;
     align-items: center;
-    align-self: flex-end;
+    /*align-self: flex-end;*/
 }
 
 .navbar_container_right_discover{
@@ -109,13 +109,13 @@
 .sideBar{
     position: fixed;
     top: 0;
+    left: 0;
     width: 24rem;
     background-color: var(--main-bg-color);
     box-shadow: var(--box-shadow);
     height: 100vh;
     overflow-y: auto;
-    display: none;
-    z-index: 1000;
+    z-index: 222222222222;
 }
 .sideBar::-webkit-scrollbar{
     display: none;
