--- a/nft-template/components/Footer/Footer.module.css
+++ b/nft-template/components/Footer/Footer.module.css
@@ -53,6 +53,14 @@
     color: var(--shadow-dark-color);
 }
 
+.subscribe_box_send{
+    cursor: pointer;
+    font-size: 2rem;
+}
+.subscribe_box_info{
+    padding: 1rem 2rem;
+}
+
 @media screen and (max-width: 45em){
     .footer_box{
         grid-template-columns: 1fr 2fr;
