--- a/nft-template/components/NFTCard/NFTCard.module.css
+++ b/nft-template/components/NFTCard/NFTCard.module.css
@@ -56,7 +56,7 @@
     gap: .5rem;
 }
 .NFTCard_box_update_left_like_icon{
-    color: red;
+    color: var(--main-bg-color);
 }
 
 .NFTCard_box_update_right{
