--- a/nft-template/components/AudioLive/AudioLive.module.css
+++ b/nft-template/components/AudioLive/AudioLive.module.css
@@ -1,14 +1,13 @@
 .audioLive{
     width: 100%;
+    margin-top: 4rem;
 }
 
 .audioLive_box{
     width: 80%;
     margin: 0 auto;
-    padding: 2rem 8rem;
-
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 2.5fr 1fr;
     gap: 2rem;
 }
 
@@ -16,9 +15,11 @@
     padding: .5rem 0 0 0 ;
     display: grid;
     gap: 2rem;
+    width: 30vw;
 }
 
 .audioLive_box_left{
+    width: 50vw;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
