--- a/nft-template/styles/globals.css
+++ b/nft-template/styles/globals.css
@@ -11,7 +11,7 @@
 
   --box-shadow: 0.5rem 0.5rem 0.5rem var(--shadow-dark-color), -0.5rem -0.5rem 0.5rem var(--shadow-light-color);
 
-  --box-shadow-2: 0rem 0rem 0rem var(--shadow-dark-color), -.3rem -.3rem 1rem var(--shadow-light-color);
+  --box-shadow-2: 0rem 0rem 0rem var(--shadow-light-color), -.3rem -.3rem 1rem var(--shadow-dark-color);
 }
 
 html,
