--- a/nft-template/styles/globals.css
+++ b/nft-template/styles/globals.css
@@ -28,6 +28,8 @@ body {
   font-size: 14px;
   background-color: var(--main-bg-color);
   color: var(--icons-color);
+  padding: 0;
+  margin: 0;
 }
 
 * {
