author pagee completed

--- a/nft-template/styles/author.module.css
+++ b/nft-template/styles/author.module.css
@@ -5,3 +5,11 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
 }
+
+.author_box{
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+}
