--- a/nft-template/components/FollowerTab/FollowerTabCard/FollowerTabCard.module.css
+++ b/nft-template/components/FollowerTab/FollowerTabCard/FollowerTabCard.module.css
@@ -84,10 +84,10 @@
 }
 
 .FollowerTabCard_box_info_following a{
-    background-color: var(--shadow_dark-color);
-    padding: .7rem 1.5rem;
+    background-color: var(--shadow-dark-color);
+    padding: .5rem 1.2rem;
     border-radius: 2rem;
-    border: 1px solid var(--shadow_dark-color);
+    border: 1px solid var(--shadow-dark-color);
     transition: all .3s ease-in;
 }
 
