--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -4,27 +4,25 @@
  * work well for content-centric websites.
  */
 
-/* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #4c5773;
+  --ifm-color-primary-dark: #424b61;
+  --ifm-color-primary-darker: #3a4255;
+  --ifm-color-primary-darkest: #2e3544;
+  --ifm-color-primary-light: #5b6986;
+  --ifm-color-primary-lighter: #69799a;
+  --ifm-color-primary-lightest: #8593b3;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #9fa8da;
+  --ifm-color-primary-dark: #8c96c7;
+  --ifm-color-primary-darker: #7f88b7;
+  --ifm-color-primary-darkest: #6b739a;
+  --ifm-color-primary-light: #b2b9e3;
+  --ifm-color-primary-lighter: #c0c7e8;
+  --ifm-color-primary-lightest: #d5daef;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
