--- a/connecting-contract/NFTDetailsPage/NFTDescription/NFTDescription.module.css
+++ b/connecting-contract/NFTDetailsPage/NFTDescription/NFTDescription.module.css
@@ -203,3 +203,22 @@
     margin-top: 2rem;
     padding: 1rem;
 }
+
+.NFTDescription_box_profile_biding_box_place_bid{
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 3rem;
+}
+
+.NFTDescription_box_profile_biding_box_price_bid button{
+    padding: 1rem 2rem;
+    font-size: 1rem;
+    font-weight: 600;
+    background-color: var(--shadow-dark-color);
+    color: var(--icons-color);
+    border-radius: 2rem;
+    cursor: pointer;
+    border: 0;
+}
